[#573] Update the tests for packages
org.jetuml
org.jetuml.application
org.jetuml.diagram
org.jetuml.builder